# antiagent

./: .env.example  Dockerfile  pyproject.toml
src/: __main__.py
